grub-gfxboot (0.97-24) UNRELEASED; urgency=low

  * NOT RELEASED YET
  * add patch by Quentin Godfroy <godfroy@clipper.ens.fr> to support ext4
    extents, which are enabled by default starting with kernel 2.6.23.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 31 Jan 2008 15:29:42 +0100

grub-gfxboot (0.97-23) unstable; urgency=low

  * attempt to port Fedora's patch to support 156 byte inodes on ext3 by Jesse
    Keating <jkeating@redhat.com>.
  * refresh quilt series.
  * debian uses *.diff as patch suffix, now we're using quilt we can revert to
    a common naming standard to ease up diff'ing.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 30 Jan 2008 14:05:45 +0100

grub-gfxboot (0.97-22) unstable; urgency=low

  * be careful and don't introduce savedefault on systems using the old,
    savedefault incompatbile, gfxmenu grub bootsectors.
  * fix syntax error.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 29 Jan 2008 21:53:36 +0100

grub-gfxboot (0.97-21) unstable; urgency=low

  * add changes from, as of yet unreleased 0.97-30, up to svn r616:
    [ Robert Millan ]
    - update-grub:
      + Update Marc Haber's address.  (Closes: #432700)
      + Make it more friendly to its GRUB 2 compatibility fork.
      + update-grub: When in GRUB 2 compatibility mode, always set "default"
        to 0.
    - control (Build-Depends-Indep): Remove e2tools and mkisofs.
  * savedefault is finally working in combination with gfxmenu, enable it
    again.
  * finalize sync with upstream debian's grub packaging.
  * remove auto-generated files from upstream source (which are already
    removed in debian/rule's clean target).

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 29 Jan 2008 21:03:30 +0100

grub-gfxboot (0.97-20) unstable; urgency=low

  * switch from dpatch to quilt.
  * update grub-gfxmenu-v8.patch to SuSE's current variant, "make
    'savedefault' work with gfxmenu (#249812)" by Steffen Winterfeldt
    <snwint@suse.de>.