@@ -8,7 +8,7 @@ Signed-Off-By: Quentin Godfroy <godfroy@clipper.ens.fr>
 
 --- a/stage2/fsys_ext2fs.c
 +++ b/stage2/fsys_ext2fs.c
-@@ -51,6 +51,9 @@ typedef unsigned int __u32;
+@@ -51,6 +51,9 @@
  #define EXT2_TIND_BLOCK                 (EXT2_DIND_BLOCK + 1)
  #define EXT2_N_BLOCKS                   (EXT2_TIND_BLOCK + 1)
  
@@ -18,7 +18,7 @@ Signed-Off-By: Quentin Godfroy <godfroy@clipper.ens.fr>
  /* include/linux/ext2_fs.h */
  struct ext2_super_block
    {
-@@ -191,6 +194,42 @@ struct ext2_dir_entry
+@@ -236,6 +239,42 @@
  #define EXT2_DIR_REC_LEN(name_len)      (((name_len) + 8 + EXT2_DIR_ROUND) & \
                                           ~EXT2_DIR_ROUND)
  
@@ -60,8 +60,8 @@ Signed-Off-By: Quentin Godfroy <godfroy@clipper.ens.fr>
 +#define EXT4_EXT_MAGIC          0xf30a
  
  /* ext2/super.c */
- #define log2(n) ffz(~(n))
-@@ -279,6 +318,26 @@ ext2_rdfsb (int fsblock, int buffer)
+ #define grub_log2(n) ffz(~(n))
+@@ -327,6 +366,26 @@
  		  EXT2_BLOCK_SIZE (SUPERBLOCK), (char *) buffer);
  }
  
@@ -88,7 +88,7 @@ Signed-Off-By: Quentin Godfroy <godfroy@clipper.ens.fr>
  /* from
    ext2/inode.c:ext2_bmap()
  */
-@@ -307,83 +366,106 @@ ext2fs_block_map (int logical_block)
+@@ -355,83 +414,106 @@
      }
    printf ("logical block %d\n", logical_block);
  #endif /* E2DEBUG */
