@@ -3,8 +3,9 @@ grub-gfxboot (0.97-24) UNRELEASED; urgency=low
   * NOT RELEASED YET
   * add patch by Quentin Godfroy <godfroy@clipper.ens.fr> to support ext4
     extents, which are enabled by default starting with kernel 2.6.23.
+  * refresh grub-0.97_support-ext4-extents.diff.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 31 Jan 2008 15:29:42 +0100
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 31 Jan 2008 15:32:12 +0100
 
 grub-gfxboot (0.97-23) unstable; urgency=low
 
